# AudienceIntelligence

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml  skills-lock.json
.scratch/groq-sdk-refactor/issues/: 01-replace-groq-http-adapter-with-official-sdk.md
audience_trend_miner/: __init__.py  __main__.py  classification.py  clustering.py  configuration.py  evidence_jobs.py  mediawiki_source_contract.py  portfolio.py  publication.py  quality.py  refinement.py  resumable_wikimedia.py  run.py  transformation.py  trends.py  v2_contracts.py  v2_wikimedia_evidence.py  wikimedia.py
audience_trend_miner/schemas/: audit.schema.json  manifest.schema.json  portfolio.schema.json  v2-stage-artifact.schema.json  v2-wikimedia-evidence.schema.json
audience_trend_miner/v2/: __init__.py
audience_trend_miner/v2/cluster_adjudication/: __init__.py  adapters.py  fixtures.py  graph.py  stage.py
audience_trend_miner/v2/run_publication/: __init__.py  orchestration.py  stage.py
audience_trend_miner/v2/semantic_audience_formation/: __init__.py  categories.py  clustering.py  embeddings.py  stage.py
audience_trend_miner/v2/shared/: __init__.py  contracts.py
audience_trend_miner/v2/trend_portfolio/: __init__.py  narratives.py  portfolio.py  stage.py  traffic.py
docs/: idea.txt
docs/adr/: 0001-postgresql-resumable-wikimedia-evidence-pipeline.md  0002-audience-intelligence-v2-cluster-first-country-trends.md
docs/research/: mediawiki-source-contract.md  semantic-formation-threshold.md
research/: audience-intelligence-v2.md  audience-trend-miner.md
tests/: __init__.py  groq_test.py  postgres.py  test_article_classification.py  test_candidate_clustering.py  test_cli.py  test_cli_wikimedia.py  test_cluster_refinement.py  test_configuration.py  test_evidence_jobs.py  test_groq_integration.py  test_mediawiki_source_contract.py  test_portfolio.py  test_publication.py  test_quality.py  test_trend_qualification.py  test_v2_stage_contract.py  test_v2_wikimedia_evidence.py  test_wikimedia_acquisition.py  test_wikimedia_transformation.py
tests/fixtures/: clustering_embeddings.json  v1_quality_evaluation.json  v2_wikimedia_evidence.json
tests/v2/: __init__.py  test_package_isolation.py
(+50 files in other folders)
