[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "audience-trend-miner"
version = "0.1.0"
description = "Build emerging audience portfolios from public attention signals."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["jsonschema>=4.23,<5"]

[project.scripts]
audience-trend-miner = "audience_trend_miner.__main__:main"

[tool.setuptools.packages.find]
include = ["audience_trend_miner*"]

[tool.setuptools.package-data]
audience_trend_miner = ["schemas/*.json"]
