[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "audience-trend-miner"
version = "0.1.0"
description = "Build emerging audience portfolios from public attention signals."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "certifi>=2025.1.31",
  "groq>=1.5,<2",
  "jsonschema>=4.23,<5",
  "psycopg[binary]>=3.2,<4",
  "sentence-transformers>=5,<6",
]

[project.scripts]
audience-trend-miner = "audience_trend_miner.__main__:main"

[tool.setuptools.packages.find]
include = ["audience_trend_miner*"]

[tool.setuptools.package-data]
audience_trend_miner = ["schemas/*.json", "v2/**/*.json"]
